hotfix: fix location of menu button on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -113,7 +113,7 @@ main {
   justify-content: center;
   box-sizing: border-box;
   padding-bottom: 2em;
-  top: calc(100vh - 70px);
+  top: calc(100vh - 120px);
   width: 100vw;
   height: 100vh;
   padding: 0 10vw;
@@ -183,15 +183,12 @@ main {
   
 
   footer {
-    position: absolute;
     display: flex;
     justify-content: center;
     box-sizing: border-box;
     padding-bottom: 2em;
-    top: calc(100vh - 100px);
     width: 100%;
     height: 80px;
-    margin-top: auto;
     .icon {
       fill: $white;
       height: 2.5em;
